# fzf-native

./: .dir-locals.el  .gitignore  CMakeLists.txt  Eask  Makefile  README.org  architecture.org  emacs-module.h  fzf-additions-test.c  fzf-additions.c  fzf-additions.h  fzf-native-ctest.c  fzf-native-module.c  fzf-native-test.el  fzf-native-utf8-test.el  fzf-native.el  fzf.c  fzf.h  utf8_char_index.h
.github/workflows/: build.yaml  cmake-binaries.yaml  cmake-binaries.yml  cmake.yaml  cmake.yml  compile.yaml  format.yaml  test.yaml
etc/: fzf_h_LICENSE  pexports.sh
utf8proc-2.10.0/: fzf_integration_test  fzf_integration_test.c
